@@ -1,0 +1,18 @@
+{% macro t(key) %}{{ {
+  "language": "ru",
+  "clipboard.copy": "Копировать в буфер",
+  "clipboard.copied": "Скопировано в буфер",
+  "edit.link.title": "Редактировать страницу",
+  "footer.previous": "Назад",
+  "footer.next": "Вперед",
+  "meta.comments": "Комментарии",
+  "meta.source": "Исходный код",
+  "search.placeholder": "Поиск",
+  "search.result.placeholder": "Начните печатать для поиска",
+  "search.result.none": "Совпадений не найдено",
+  "search.result.one": "Найдено 1 совпадение",
+  "search.result.other": "Найдено # совпадений",
+  "search.tokenizer": "[\s\-]+",
+  "source.link.title": "Перейти к репозиторию",
+  "toc.title": "Содержание"
+}[key] }}{% endmacro %}
